--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -23,6 +23,8 @@
 .imgstyle {
     width: 280px;
     height: 113px;
+    position:relative;
+    overflow:hidden;
 }
 .list {
     list-style: none;
@@ -32,7 +34,6 @@
     margin-top: 3rem;
     display: flex;
     flex-direction: column;
-    position: relative;
 }
 .titolo {   
     position: absolute;
@@ -60,7 +61,7 @@
 }
 .frecciaup{
     position: absolute;
-    left: 70%;
+    left: 80%;
     top: 10%;
     z-index: 3;
     background-color: rgba(204, 204, 204, 1);
@@ -70,12 +71,18 @@
 }
 .frecciadown {
     position: absolute;
-    top: 109%;
-    left: 71%;
+    top: 98%;
+    left: 80%;
     float: left;
     z-index: 3;
     -webkit-transform: translateY(-100%) translateX(-50%);
     background-color: rgba(204, 204, 204, 1);
     border-radius: 20px;
     padding: 5px;
+}
+.unselectedImg{
+    filter: opacity(0.5);
+}
+.selected {
+    border: 7px solid white;
 }
