--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -84,5 +84,6 @@
     filter: brightness(0.5);
 }
 .selected {
-    border: 7px solid white;
+    border: 10px solid white;
+    overflow: hidden;
 }
